--- a/model/STCAN.yaml
+++ b/model/STCAN.yaml
@@ -1,79 +1,3 @@
-METRLA:
-  num_nodes: 207
-  in_steps: 12
-  out_steps: 12
-
-  train_size: 0.7
-  val_size: 0.1
-
-  time_of_day: True
-  day_of_week: True
-
-  lr: 0.001
-  weight_decay: 0.0003
-  milestones: [20,30]
-  lr_decay_rate: 0.1
-  batch_size: 16
-  max_epochs: 200
-  early_stop: 30
-  use_cl: False
-  cl_step_size: 2500
-  #clip_grad: 5
-
-  model_args:
-    num_nodes: 207
-    in_steps: 12
-    out_steps: 12
-    steps_per_day: 288
-    input_dim: 3
-    output_dim: 1
-    input_embedding_dim: 24
-    tod_embedding_dim: 24
-    dow_embedding_dim: 24
-    spatial_embedding_dim: 0
-    adaptive_embedding_dim: 80
-    feed_forward_dim: 256
-    num_heads: 4
-    num_layers: 3
-    dropout: 0.1
-
-PEMSBAY:
-  num_nodes: 325
-  in_steps: 12
-  out_steps: 12
-
-  train_size: 0.7
-  val_size: 0.1
-
-  time_of_day: True
-  day_of_week: True
-
-  lr: 0.001
-  weight_decay: 0.0001
-  milestones: [10, 30]
-  lr_decay_rate: 0.1
-  batch_size: 16
-  max_epochs: 300
-  early_stop: 20
-  use_cl: False
-
-  model_args:
-    num_nodes: 325
-    in_steps: 12
-    out_steps: 12
-    steps_per_day: 288
-    input_dim: 3
-    output_dim: 1
-    input_embedding_dim: 24
-    tod_embedding_dim: 24
-    dow_embedding_dim: 24
-    spatial_embedding_dim: 0
-    adaptive_embedding_dim: 80
-    feed_forward_dim: 256
-    num_heads: 4
-    num_layers: 3
-    dropout: 0.1
-
 PEMS04:
   num_nodes: 307
   in_steps: 12
@@ -188,9 +112,8 @@ PEMS08:
     num_layers: 3
     dropout: 0.1
 
-# This is abandoned, needs further tuning if you want to run
-PEMS03:
-  num_nodes: 358
+NYCBike:
+  num_nodes: 250
   in_steps: 12
   out_steps: 12
 
@@ -199,10 +122,10 @@ PEMS03:
 
   time_of_day: True
   day_of_week: True
-  
+
   lr: 0.001
   weight_decay: 0.0005
-  milestones: [15, 30, 40]
+  milestones: [15, 30, 50]
   lr_decay_rate: 0.1
   batch_size: 16
   max_epochs: 300
@@ -211,7 +134,7 @@ PEMS03:
   cl_step_size: 2500
 
   model_args:
-    num_nodes: 358
+    num_nodes: 250
     in_steps: 12
     out_steps: 12
     steps_per_day: 288
@@ -226,3 +149,42 @@ PEMS03:
     num_heads: 4
     num_layers: 3
     dropout: 0.1
+
+NYCTaxi:
+  num_nodes: 266
+  in_steps: 12
+  out_steps: 12
+
+  train_size: 0.6
+  val_size: 0.2
+
+  time_of_day: True
+  day_of_week: True
+
+  lr: 0.001
+  weight_decay: 0.0005
+  milestones: [15, 30, 50]
+  lr_decay_rate: 0.1
+  batch_size: 16
+  max_epochs: 300
+  early_stop: 20
+  use_cl: False
+  cl_step_size: 2500
+
+  model_args:
+    num_nodes: 266
+    in_steps: 12
+    out_steps: 12
+    steps_per_day: 288
+    input_dim: 3
+    output_dim: 1
+    input_embedding_dim: 24
+    tod_embedding_dim: 24
+    dow_embedding_dim: 24
+    spatial_embedding_dim: 0
+    adaptive_embedding_dim: 80
+    feed_forward_dim: 256
+    num_heads: 4
+    num_layers: 3
+    dropout: 0.1
+
